# coles-vibe-workshop

./: .gitignore  CLAUDE.md  FACILITATOR-GUIDE.md  FACILITATOR-SCRIPT.md  LAB-0-GETTING-STARTED.md  LAB-1-ANALYST.md  LAB-1-DATA-PIPELINE.md  LAB-1-DE.md  LAB-1-DS.md  LAB-2-ANALYST.md  LAB-2-APP-GENIE-DASHBOARD.md  LAB-2-DE.md  LAB-2-DS.md  LAB-2-FULLSTACK-APP.md  LAB-3-MCP-INTEGRATION.md  PRE-WORKSHOP-SETUP.md  VIBE-CODING-GUIDE.md  WORKSHOP-PLAN.md  WORKSHOP-TRANSCRIPT.md  index.html  opener.html  quick-reference.html  quiz.html  slides-facilitator.html  slides.html  track-analyst.html  track-common.html  track-de.html  track-ds.html
demo-pipeline/: .gitignore  CLAUDE.md  Makefile  README.md  databricks.yml  pretty.output  pyproject.toml
demo-pipeline/features/: environment.py  pipeline.feature
demo-pipeline/features/steps/: pipeline_steps.py
demo-pipeline/resources/: pipeline.yml
demo-pipeline/src/bronze/: abs_cpi_food  abs_cpi_food.py  abs_retail_trade.py
demo-pipeline/src/gold/: food_inflation_yoy.py  retail_summary  retail_summary.py
demo-pipeline/src/grocery_intelligence/: __init__.py  mappings.py
demo-pipeline/src/silver/: food_price_index  food_price_index.py  retail_turnover.py
grocery-intel-demo/: .gitignore  README.md  databricks.yml
notes/: harnesses-article.md  rvpi-validate-step.md  til-2026-04-19.md  vibe-coding-in-prod-talk.md
quiz-app/: DEPLOY.md  app.py  app.yaml  pyproject.toml
quiz-app/static/: index.html
reference-implementation/: CLAUDE.md  README.md  databricks.yml
requirements/: analyst.txt  de.txt  ds.txt  shared.txt
(+94 files in other folders)
