[project]
name = "grocery-intelligence-demo"
version = "0.1.0"
description = "Demo pipeline for the Coles Vibe Coding Workshop"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "behave>=1.2.6",
    "databricks-sdk>=0.40",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.behave]
paths = ["features"]
format = ["pretty"]
