[project]
name = "grocery-quiz"
version = "0.1.0"
description = "Interactive workshop quiz app for the Coles Vibe Coding Workshop"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
